--- a/report/main.tex
+++ b/report/main.tex
@@ -1,9 +1,10 @@
 \documentclass{utue} %utue.cls required for Uni Tuebingen corporate design
 
-\usepackage[style=numeric]{biblatex}
+\usepackage[style=alphabetic, maxbibnames=99]{biblatex}
 \addbibresource{bibliography.bib}
 \usepackage{amsmath}
 \usepackage{placeins}
+\usepackage[hidelinks]{hyperref}
 
 % Values for title generation
 \title{Controlling Phasor Noise Artifacts}
@@ -12,6 +13,12 @@
 
 % Subtitle is optional. It represents what kind of work you did.
 \subtitle{Research Project}
+
+\hypersetup{
+  colorlinks=false,
+  pdftitle={Controlling Phasor Noise Artifacts},
+  bookmarks=true,
+}
 
 \DeclareMathOperator{\atan}{atan}
 
@@ -52,9 +59,9 @@ where $\vec{p}_i$ are the positions of the Dirac Impulses. \citeauthor{gaborNois
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/gaborKernel}
-  \includegraphics[width=0.45\linewidth]{images/gaborNoise}
-  \caption{An instance of the Gabor Kernel (left) and an instance of Gabor Noise (right). Note the low contrast areas (marked).}\label{fig:gaborNoise}
+  \includegraphics[width=0.49\linewidth]{images/gaborKernel}
+  \includegraphics[width=0.49\linewidth]{images/gaborNoise}
+  \caption{An instance of the Gabor Kernel (left) and an instance of Gabor Noise (right). Note the low contrast areas, like the ones that are marked.}\label{fig:gaborNoise}
 
 \end{figure}
 
@@ -67,8 +74,8 @@ where $\mathcal{F}$ denotes the Fourier transform and $\overline{s}$ represents 
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/gaborNoiseSpectrumOfVariance}
-  \includegraphics[width=0.45\linewidth]{images/phasorNoiseSpectrumOfVariance}
+  \includegraphics[width=0.49\linewidth]{images/gaborNoiseSpectrumOfVariance}
+  \includegraphics[width=0.49\linewidth]{images/phasorNoiseSpectrumOfVariance}
   \caption{The spectrum of Variance of Gabor noise (left) and Phasor noise (right) as displayed in \cite{phasorNoise}. Note the absence of a central lobe for Phasor Noise, which indicates no local loss of contrast.}\label{fig:spectrumOfVariance}
 \end{figure}
 
@@ -81,7 +88,7 @@ where $f$ and $\vec{u}$ are again the frequency and direction of the main oscill
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width = 0.45\linewidth]{images/phasorSineWave}
+  \includegraphics[width = 0.49\linewidth]{images/phasorSineWave}
   \caption{A Phasor sine wave. Note the artifacts previously masked by the low contrast areas.}\label{fig:phasorNoise}
 \end{figure}
 
@@ -89,12 +96,12 @@ where $f$ and $\vec{u}$ are again the frequency and direction of the main oscill
 In Section \ref{sec:stripes} we will see, that we need a function, defined on a mesh, that increases with a direction and speed determined by a vector field. We need this function to generate a stripe pattern by plugging it into a periodic function. As stated in \cite{stripes}, this is not always trivial, even for a simple plane, as vector fields with non-zero curl are non-integrable. \cite{stripes} provides a solution by deriving an equality constraint, which is then relaxed to a minimization. While necessary to receive a solution, it unfortunately allows new singularities to emerge, which is obviously necessary, when considering an object whose width varies along the stripe direction. As the width the stripes have to cover increases, either the number of stripes needs to increase, or the stripe frequency needs to drop. For our application one could replace their work with another way to generate a function that fulfills this purpose, but here we will use their work.
 
 \section{The constant Case}
-We will first look at a simple case. This case corresponds to the bilobe case of Phasor Noise. This means a constant oscillation direction and frequency. However, before we start out, we will define a third type of artifact besides singularities and rips: wobble. Comparing the areas of a Phasor sine wave with a regular sine wave, we find that the lines are not perfectly straight. We will refer to this fact as wobble from now on. From Section \ref{sec:phasorNoise} we recall that in this case Phasor Noise consists of two parts: A function increasing in a given direction and a phase offset. Figure \ref{fig:phasorNoisePhase} shows a Phasor Noise instance as well as its phase offset. Comparing the phase from Figure \ref{fig:phasorNoisePhase} with Figure \ref{fig:phasorNoise}, we can easily find a correspondence between artifacts of the Phasor sine wave and features of the phase. The existence of wobble is caused by the fact, that the phase is not constant even in areas, where there are no other artefacts present. \citeauthor{phasorNoise} already identify that rips are caused by sudden value changes in the phase offset, while singularities are located at points around which the phase offset rotates abruptly.\\
+We will first look at a simple case. This case corresponds to the bilobe case of Phasor Noise. This means a constant oscillation direction and frequency. However, before we start out, we will define a third type of artifact besides singularities and rips: wobble. Comparing the areas of a Phasor sine wave with a regular sine wave, we find that the lines are not perfectly straight. We will refer to this fact as wobble from now on. From Section \ref{sec:phasorNoise} we recall that in this case Phasor Noise consists of two parts: A function increasing in a given direction and a phase offset. Figure \ref{fig:phasorNoisePhase} shows a Phasor Noise instance as well as its phase offset. Comparing the phase from Figure \ref{fig:phasorNoisePhase} with Figure \ref{fig:phasorNoise}, we can easily find a correspondence between artifacts of the Phasor sine wave and features of the phase. The existence of wobble is caused by the fact, that the phase is not constant even in areas, where there are no other artifacts present. \citeauthor{phasorNoise} already identify that rips are caused by sudden value changes in the phase offset, while singularities are located at points around which the phase offset rotates abruptly.\\
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/phasorNoise}
-  \includegraphics[width=0.45\linewidth]{images/phasorPhase}
+  \includegraphics[width=0.49\linewidth]{images/phasorNoise}
+  \includegraphics[width=0.49\linewidth]{images/phasorPhase}
   \caption{Phasor Noise (left) and its phase offset (right). Angle is mapped to hue.}\label{fig:phasorNoisePhase}
 \end{figure}
 
@@ -106,15 +113,15 @@ The other, more important one is that it is harder to ensure the absence of sing
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/simpleAlgo}
+  \includegraphics[width=0.49\linewidth]{images/simpleAlgo}
   \caption{A simple noise algorithm creating a singularity on a cyclical domain. The circles represent the points of the lattice while in between them the interpolation is shown. The rest shows possible values for the domain. Angle is again mapped to hue.}\label{fig:simpleAlgirithmSingularity}
 \end{figure}
 
 Therefore, we will stick with algorithms outputting to the classic domain of $[-1,1]$. The actual phase offset is of course still in the cyclic domain on $[0,2\pi)$, so the interval of $[-1,1]$ is mapped to $[2\pi-1,1]$. When more or less wobble is needed, these numbers can of course be rescaled to fit the specific needs. Figure \ref{fig:wobble} shows a Phasor sine wave with a phase offset applied. This phase offset is generated using a simple hierarchical algorithm, that uses cosine interpolation between lattice points. Note that while there is an obvious difference in the phase offset used in Figure \ref{fig:wobble} and the phase obtained from real Phasor Noise as shown in Figure \ref{fig:phasorNoisePhase}, there is no noticeable difference in wobble when applied to a Phasor sine wave as shown in Figure \ref{fig:phasorNoise}.
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/wobble}
-  \includegraphics[width=0.45\linewidth]{images/wobblePhase}
+  \includegraphics[width=0.49\linewidth]{images/wobble}
+  \includegraphics[width=0.49\linewidth]{images/wobblePhase}
   \caption{An artificially created Phasor sine wave (left) without any artifacts except for wobble and its phase offset (right).}\label{fig:wobble}
 \end{figure}
 When using the function $w(\vec{x})$ to compute the phase offset causing the wobble, we can represent our constructed phase offset as $\varphi_c(\vec{x}) = w(\vec{x})$.
@@ -133,18 +140,19 @@ $$
 $$
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.23\linewidth]{images/rightSingularityPhase}
-  \includegraphics[width=0.23\linewidth]{images/rightSingularity}
-  \includegraphics[width=0.23\linewidth]{images/leftSingularityPhase}
-  \includegraphics[width=0.23\linewidth]{images/leftSingularity}
+  \includegraphics[width=0.235\linewidth]{images/rightSingularityPhase}
+  \includegraphics[width=0.235\linewidth]{images/rightSingularity}
+  \hfill
+  \includegraphics[width=0.235\linewidth]{images/leftSingularityPhase}
+  \includegraphics[width=0.235\linewidth]{images/leftSingularity}
   \caption{A simple way to add a single singularity to a sine wave. In order: Phase offset of right singularity, right singularity in Phasor Sine Wave, phase offset of left singularity, left singularity in Phasor Sine Wave. Both Phasor Sine Waves are without wobble. For the phase offsets angle is mapped to hue.}\label{fig:singularities}
 \end{figure}
 
 One important thing to note is the fact, that this means, that for each point we need to evaluate each of the singularity terms. For large images with a lot of singularities, this will slow down the evaluation a lot. In such cases, it is common practice to fade out the effects of a local change using a Gaussian function. Once the Gaussian is sufficiently small, the local change can be ignored. However, as Figure \ref{fig:fadedSingularity} shows, this can not be applied here, because our defined function relies on a continuity across the $0$/$2\pi$ boundary. Since the values at this boundary always have to be $0$ and $2\pi$ respectively, we can not simply fade this function out.
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/fadedPhase}
-  \includegraphics[width=0.45\linewidth]{images/fadedPhaseSineWave}
+  \includegraphics[width=0.49\linewidth]{images/fadedPhase}
+  \includegraphics[width=0.49\linewidth]{images/fadedPhaseSineWave}
   \caption{Trying to fade out the phase offset to create a singularity using a Gaussian function. The phase offset (left) is no longer continuous, which leads to a rip in the sine wave (right). Angle is again mapped to hue.}\label{fig:fadedSingularity}
 \end{figure}
 However, if we take a left and a right singularity and orient them in such a way, that their boundaries point towards each other, we no longer have this problem, as shown in Figure \ref{fig:dualSingularity}. The $0$/$2\pi$ border now has a defined end point. We will call such a pair of singularities a dual singularity. For a pair of Singularities $s_i$ and $t_i$, we can add the following to our generated phase offset:
@@ -166,13 +174,15 @@ $$
     \exp(\frac{d_l^2}{\sigma^2}), &\text{otherwise}\\
   \end{cases},
 $$
-where $\theta=\atan(\vec{t_i}-\vec{s_i})$, $d_s$, $d_t$ and $d_l$ are the distances to $s_i$, $t_i$ and the line connecting the two respectively and $\sigma$ determines the speed at which the dual singularity is faded out. Note, that we subtract $\pi$ from this phase offset, to make one side dip down a little, while the other one increase, instead of just one increasing by twice as much. We do this, because to make room for an additional line, the other lines shift slightly as can already be seen in Figure \ref{fig:fadedSingularity} and is still visible in Figure \ref{fig:dualSingularity}. However, we assume the existence of wobble, which masks this small offset.
+where $\theta=\atan(\vec{t_i}-\vec{s_i})$, $d_s$, $d_t$ and $d_l$ are the distances to $s_i$, $t_i$ and the line connecting the two respectively and $\sigma$ determines the speed at which the dual singularity is faded out. Note that we subtract $\pi$ from this phase offset, to make one side dip down a little, while the other one increase, instead of just one increasing by twice as much. The reason for this is, that to make room for an additional line, the other lines shift slightly as can already be seen in Figure \ref{fig:fadedSingularity} and is still visible in Figure \ref{fig:dualSingularity}. Spreading this shift out to both sides of makes is less visible. Additionally we assume the existence of wobble, which masks this small offset.
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.3\linewidth]{images/dualSingularityPhase}
-  \includegraphics[width=0.3\linewidth]{images/dualSingularityFaded}
-  \includegraphics[width=0.3\linewidth]{images/dualSingularitySineWave}
+  \includegraphics[width=0.32\linewidth]{images/dualSingularityPhase}
+  \hfill
+  \includegraphics[width=0.32\linewidth]{images/dualSingularityFaded}
+  \hfill
+  \includegraphics[width=0.32\linewidth]{images/dualSingularitySineWave}
   \caption{The phase offset for a dual singularity (left), the offset for a dual singularity faded by a Gaussian (center) and the phase offset in a sine wave (right).}\label{fig:dualSingularity}
 \end{figure}
 
@@ -188,23 +198,25 @@ Rips are caused by a large change in the phase offset. When trying to fade out a
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/ripPhase}
-  \includegraphics[width=0.45\linewidth]{images/rip05}
+  \includegraphics[width=0.49\linewidth]{images/ripPhase}
+  \includegraphics[width=0.49\linewidth]{images/rip05}
   \caption{The phase offset for a rip with a weight of $0.5$ (left) and its impact on a sine wave (right).}\label{fig:ripPhase}
 \end{figure}
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.3\linewidth]{images/rip01}
-  \includegraphics[width=0.3\linewidth]{images/rip05}
-  \includegraphics[width=0.3\linewidth]{images/rip09}
+  \includegraphics[width=0.32\linewidth]{images/rip01}
+  \hfill
+  \includegraphics[width=0.32\linewidth]{images/rip05}
+  \hfill
+  \includegraphics[width=0.32\linewidth]{images/rip09}
   \caption{A rip with a weight of $0.1$ (left), one with a weight of $0.5$ (center) and one with a weight of $0.9$ (right). The low weight of the first rip leads to an almost negligible rip, while the medium weight of the second leads to the maximum difference between the sides of the rip. The large weight of the last also leads to only a small offset. However, the rip is framed by singularities on both sides.}\label{fig:ripWeight}
 \end{figure}
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/ripChaining}
-  \includegraphics[width=0.45\linewidth]{images/ripChainingPhase}
+  \includegraphics[width=0.49\linewidth]{images/ripChaining}
+  \includegraphics[width=0.49\linewidth]{images/ripChainingPhase}
   \caption{Multiple rips chained together to form a square (left) and the phase offset used to accomplish this (right).}\label{fig:ripChaining}
 \end{figure}
 
@@ -221,8 +233,9 @@ For demonstration purposes, we always used only one artifact type at a time, how
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/combiningArtifacts}
-  \caption{A combination of multiple artifacts. This combination does not create any unwanted artifacts.}\label{fig:combiningArtifacts}
+  \includegraphics[width=0.49\linewidth]{images/combiningArtifacts}
+  \includegraphics[width=0.49\linewidth]{images/combiningArtifactsPositions}
+  \caption{A combination of multiple artifacts (left) and the position of the artifacts fed to the algorithm (right). The positions for singularities are marked in red, while the positions for rips are marked in green. This combination does not create any unwanted artifacts.}\label{fig:combiningArtifacts}
 \end{figure}
 
 
@@ -249,8 +262,9 @@ $$
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/paraboloidDir}
-  \caption{A constructed Phasor noise instance using the derivative of a parabola as direction field.}\label{fig:parabola}
+  \includegraphics[width=0.49\linewidth]{images/paraboloidDir}
+  \includegraphics[width=0.49\linewidth]{images/combiningArtifactsPositions}
+  \caption{A constructed Phasor noise instance using the derivative of a parabola as direction field (left) and the positions of the artifacts (right). The positions for singularities are shown in red and the positions of for rips are shown in green.}\label{fig:parabola}
 \end{figure}
 
 \subsection{Non-integrable Direction Field}\label{sec:stripes}
@@ -259,16 +273,16 @@ One method to create a base function, which we can use, is to create a low frequ
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/multiStripe}
-  \includegraphics[width=0.45\linewidth]{images/multiStripeMulti}
+  \includegraphics[width=0.49\linewidth]{images/multiStripe}
+  \includegraphics[width=0.49\linewidth]{images/multiStripeMulti}
   \caption{A low frequency stripe pattern with varying direction and wobble (left) and the pattern extended to create multiple stripes per period (right).}\label{fig:multiStripe}
 \end{figure}
 
-Another approach is to try to adapt the techniques we developed so far to work with these limitations. However, as we will see, this too will not be as successful as in the constant case. As before, the first artifact we will have a look at is wobble. We apply a simple trick to ensure the symmetry of our function. The first thing we do is to take the absolute value of $f$. We will now add wobble as we did before. The result is shown in Figure \ref{fig:multiDirWobble}. Instead of the lines moving to one side, they actually vary in width. This is because we do not know on which side of the peak we are, so we can either add or subtract from both. Of course, the actual value varies, but since the wobble phase offset is continuous, in a local area, it is either one or the other.
+Another approach is to try to adapt the techniques we developed so far to work with these limitations. However, as we will see, this too will not be as successful as in the constant case. As before, the first artifact we will have a look at is wobble. We apply a simple trick to ensure the symmetry of our function. The first thing we do is to take the absolute value of $f$. We will now add wobble as we did before. The result is shown in Figure \ref{fig:multiDirWobble}. Instead of the lines moving to one side, they actually vary in width. This is because we do not know on which side of the peak we are, so we can either add or subtract from both. Of course, the actual value varies, but since the wobble phase offset is continuous, so in a local area, it is either one or the other.
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/multiDirWobble}
+  \includegraphics[width=0.49\linewidth]{images/multiDirWobble}
   \caption{Adding wobble does not move the lines, but causes them to vary in width.}\label{fig:multiDirWobble}
 \end{figure}
 
@@ -276,7 +290,7 @@ The other artifact type we will have a look at is rips. Having a look at Figure 
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/multiDirRip}
+  \includegraphics[width=0.49\linewidth]{images/multiDirRip}
   \caption{Creating a rip in an environment with a non-integrable direction field. The lines do not shift to create an opposition, but vary in width.}\label{fig:multiDirRip}
 \end{figure}
 
@@ -286,6 +300,9 @@ Our technique naturally lends itself to applications Phasor noise is useful in, 
 \begin{figure}[ht]
   \centering
   \includegraphics[width=\linewidth]{images/mountains}
+
+  \vspace{2pt}
+  
   \includegraphics[width=\linewidth]{images/mountainsRip}
   \caption{A procedurally generated mountain range using wobble and singularities (top) and the same mountain range disturbed by an earthquake (bottom).}\label{fig:mountains}
 \end{figure}
@@ -298,9 +315,12 @@ Our technique naturally lends itself to applications Phasor noise is useful in, 
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/brick}
-  \includegraphics[width=0.45\linewidth]{images/brickSimple}
-  \includegraphics[width=0.45\linewidth]{images/brickRespecting}
+  \includegraphics[width=0.49\linewidth]{images/brick}
+  \includegraphics[width=0.49\linewidth]{images/brickSimple}
+
+  \vspace{2pt}
+
+  \includegraphics[width=0.49\linewidth]{images/brickRespecting}
   \caption{Adding detail to a na\"ively upscaled brick texture. The original texture (left) and a version with na\"ively added detail (center). We can use rips to force discontinuities where the original texture suggests a change of material (right).}\label{fig:bricks}
 \end{figure}
 
